kubernetes/app/reitti/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: reitti-db
  namespace: reitti
spec:
  clusterIP: None
  selector:
    app: reitti-db
  ports:
    - port: 5432
      targetPort: 5432
